# variadic-closure

./: Cargo.toml
src/: lib.rs
