[package]
name = "variadic_closure"
version = "1.0.3"
edition = "2018"
description = "Support for dynamically created and called closures with variable number of arguments"
repository = "https://github.com/philip-peterson/variadic-closure"
authors = ["Philip Peterson <philip.c.peterson@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
